shorten market texts & fixed icons on firefox

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -274,7 +274,7 @@ Branches
 
 #branches {
 
-  #branches-header {
+  .section-header {
     padding: 60px 0 70px;
   }
 
@@ -282,10 +282,12 @@ Branches
     .col {
       position: relative;
       width: 33.33%;
-      padding: 45px;
+      padding: 0 45px 40px;
+      //text-align: center;
 
       .icon {
         position: absolute;
+        display: inline-block;
         left: 50%;
         top: -37px;
         margin-left: -37px;
@@ -303,6 +305,13 @@ Branches
         
       h2, a {
         color: $link-color !important;
+      }
+
+      h2 {
+        position: relative;
+        margin-top: 0;
+        padding-top: 2em;
+        font-size: 1.8em;
       }
 
       &.green {
@@ -334,6 +343,7 @@ Branches
 
     p {
       color: #666;
+      font-size: 1.3em
     }
   }
 }
